Add jwt based security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.hibernate.ddl-auto=validate
 
+# security
+jwt.secret=5gsoi
+jwt.expiration.ms=600000
+cors.allowed-origin=http://localhost:4200
+
