Rename docker & add README.md

--- a/docker/demo-app-services/docker-compose.local.yml
+++ b/docker/demo-app-services/docker-compose.local.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 services:
   postgres:
-    container_name: demo
+    container_name: postgres
     image: postgres:13-alpine
     restart: always
     environment:
